--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,4 +1,4 @@
-<div class="bar bar-header bar-stable">
+<div class="bar bar-header bar-positive">
   <button class="button button-icon icon ion-ios-arrow-left" ng-click="$ionicGoBack()"></button>
   <h1 class="title" style="left: 35px;">CIRCUITO POPULAR DE CORRIDAS - PENHA</h1>
 </div>
@@ -14,7 +14,7 @@
         <input type="text" placeholder="Seu nome">
       </label>
       <div class="padding">
-        <button class="button button-block button-positive icon-left ion-search">Filtrar</button>
+        <button class="button button-block button-calm icon-left ion-search">Filtrar</button>
       </div>
     </div>
 
