--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -17,8 +17,8 @@ $dark:                            #444 !default;
 
 $light:                           #fff !default;
 $stable:                          #f8f8f8 !default;
-$positive:                        #387ef5 !default;
-$calm:                            #11c1f3 !default;
+$positive:                        #2E3092 !default;
+$calm:                            #00AEEF !default;
 $balanced:                        #33cd5f !default;
 $energized:                       #ffc900 !default;
 $assertive:                       #ef473a !default;
