--- a/www/templates/dates.html
+++ b/www/templates/dates.html
@@ -1,14 +1,12 @@
 <div class="bar bar-header bar-positive">
   <button class="button button-icon icon ion-ios-arrow-left" ng-click="$ionicGoBack()"></button>
-  <h1 class="title">Eventos</h1>
+  <h1 class="title">Eventos do mês</h1>
 </div>
 <ion-view>
   <ion-content class="has-header">
     <ion-list>
-      <ion-item ng-repeat="item in events" href="#/app/event/{{ item.id }}">
-        <h3>{{ item.title }}</h3>
-        <p>REALIZADO EM {{ item.date }}</p>
-        <p ng-show="item.local">{{ item.local }}</p>
+      <ion-item ng-repeat="item in dates" href="#/app/events/{{ item.year }}/{{ item.month }}">
+        <h3>{{ item.month }}/{{ item.year }}</h3>
       </ion-item>
     </ion-list>
   </ion-content>
