--- a/www/templates/dates.html
+++ b/www/templates/dates.html
@@ -1,6 +1,6 @@
 <div class="bar bar-header bar-positive">
   <button class="button button-icon icon ion-ios-arrow-left" ng-click="$ionicGoBack()"></button>
-  <h1 class="title">Eventos do mês</h1>
+  <h1 class="title">Selecione um mês</h1>
 </div>
 <ion-view>
   <ion-content class="has-header">
