--- a/www/templates/events.html
+++ b/www/templates/events.html
@@ -1,11 +1,11 @@
 <div class="bar bar-header bar-positive">
   <button class="button button-icon icon ion-ios-arrow-left" ng-click="$ionicGoBack()"></button>
-  <h1 class="title">Eventos</h1>
+  <h1 class="title">Eventos do mês {{ month }}/{{ year }}</h1>
 </div>
 <ion-view>
   <ion-content class="has-header">
     <ion-list>
-      <ion-item ng-repeat="item in events" href="#/app/event/{{ item.id }}">
+      <ion-item ng-repeat="item in events" ng-click="setEventTitle(item)" href="#/app/event/{{ item.id }}">
         <h3>{{ item.title }}</h3>
         <p>REALIZADO EM {{ item.date }}</p>
         <p ng-show="item.local">{{ item.local }}</p>
