--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Home">
   <ion-content class="padding">
-    <img src="img/logo.png" alt="Cronoserv" style="margin: 50px auto; display: block;" />
+    <img src="img/logo.png" alt="Cronoserv" style="margin: 50px auto; display: block; width: 220px;" />
 
     <a class="button button-block button-calm icon-left ion-search" href="#/app/dates">
       Consulte os resultados
