--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -7,14 +7,14 @@
     <div class="list">
       <label class="item item-input item-stacked-label">
         <span class="input-label">Nº de Peito</span>
-        <input type="number" placeholder="123455">
+        <input type="number" placeholder="123455" ng-model="number">
       </label>
       <label class="item item-input item-stacked-label">
         <span class="input-label">Nome</span>
-        <input type="text" placeholder="Seu nome">
+        <input type="text" placeholder="Seu nome" ng-model="name">
       </label>
       <div class="padding">
-        <button class="button button-block button-calm icon-left ion-search">Filtrar</button>
+        <button class="button button-block button-calm icon-left ion-search">Buscar</button>
       </div>
     </div>
 
