--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -31,7 +31,7 @@
         Classificação: {{ item.general_classification.classification }}
       </div>
       <div class="item">
-        Tempo liquido: {{ item.general_classification.liquid_time }}
+        Tempo bruto: {{ item.general_classification.time }}
       </div>
       <div class="item">
         Tempo liquido: {{ item.general_classification.liquid_time }}
@@ -43,7 +43,7 @@
         Classificação: {{ item.category_classification.classification }}
       </div>
       <div class="item">
-        Tempo liquido: {{ item.category_classification.liquid_time }}
+        Tempo bruto: {{ item.category_classification.time }}
       </div>
       <div class="item">
         Tempo liquido: {{ item.category_classification.liquid_time }}
@@ -55,7 +55,7 @@
         Classificação: {{ item.gender_classification.classification }}
       </div>
       <div class="item">
-        Tempo liquido: {{ item.gender_classification.liquid_time }}
+        Tempo bruto: {{ item.gender_classification.time }}
       </div>
       <div class="item">
         Tempo liquido: {{ item.gender_classification.liquid_time }}
