--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -21,8 +21,8 @@
     <div class="card" ng-repeat="item in result">
       <div class="item">
         <h2>#{{ item.general_classification.classification }} - {{ item.name }}</h2>
-        <p>Número: {{ item.code }}, sexo: {{ item.gender }}, idade: {{ item.age }}</p>
-        <!-- <p>Equipe: {{ item.group }}, modalidade: {{ item.gender }}, categoria: {{ item.category }}</p> -->
+        <p>Número: {{ item.code }} | Sexo: {{ item.gender }} | Idade: {{ item.age }}</p>
+        <p>Equipe: {{ item.group ? item.group : '-' }} | Modalidade: {{ item.modality ? item.modality : '-' }} | Categoria: {{ item.category ? item.category : '-' }}</p>
       </div>
       <div class="item item-divider">
         Classificação geral
