--- a/www/templates/dates.html
+++ b/www/templates/dates.html
@@ -6,7 +6,7 @@
   <ion-content class="has-header">
     <ion-list>
       <ion-item ng-repeat="item in dates" href="#/app/events/{{ item.year }}/{{ item.month }}">
-        <h3>{{ item.month }}/{{ item.year }}</h3>
+        <h3>{{ item.month }} de {{ item.year }}</h3>
       </ion-item>
     </ion-list>
   </ion-content>
